--- a/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
@@ -13,7 +13,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.journal{
+.journal-counter{
     background-color:olive;
     position: relative;
     width: 100px;
@@ -23,6 +23,76 @@ body {
     border-radius: 30px;
     padding: 20px;
     color: white;
+}
+
+.info{
+    width: 30%;
+    height: 100%;
+    pointer-events: auto !important;
+
+}
+
+.infobox{
+    position: relative;
+    background-color: blue;
+    width: 50vw;
+    height: 100px;
+    z-index: 100;
+    display: inline-block;
+    margin: 0px;
+    padding: 30px;
+    box-sizing: border-box;
+    left:40px;
+}
+
+#journalButton{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    bottom: 90px;
+    border-radius: 60px;
+    left: 50%;
+}
+
+#journal:hover{
+
+}
+
+#journal-container{
+    position: absolute; 
+    height: 80vh;
+    width: 90vw;
+
+    left: 5vw;
+    background-color: blanchedalmond;
+    border-radius: 20px;
+    transition: bottom 0.5s ease-in-out;
+}
+
+.show{
+    bottom: 10vh;
+    
+}
+
+.hide{
+    bottom: -100vh;
+
+}
+
+#pink{
+    background-color: rgb(255, 0, 251);
+   
+}
+
+#red{
+    background-color: rgb(255, 0, 0);  
+    margin: 0px;
+}
+
+#green{
+    background-color: rgb(25, 99, 5);  
+    margin: 0px;
+    top:400px;
 }
 
 .plant-number{
@@ -44,6 +114,7 @@ body {
     display: flex;
     flex-direction: column;
     user-select: none;
+    overflow: hidden;
     /* border: 1px solid red; */
 }
 
