--- a/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
@@ -13,6 +13,61 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.swiper {
+    width:100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    display: flex;
+    padding-top:30px;
+    justify-content:center;
+    border-radius: 18px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  .swiper-slide:nth-child(1n) {
+    background-color: rgb(203, 199, 167);
+  }
+
+  .swiper-slide:nth-child(2n) {
+    background-color: rgb(198, 177, 152);
+  }
+
+  .swiper-slide:nth-child(3n) {
+    background-color: rgb(240, 211, 176);
+  }
+
+  .swiper-slide:nth-child(4n) {
+    background-color: rgb(232, 202, 161);
+  }
+
+  .swiper-slide:nth-child(5n) {
+    background-color: rgb(220, 189, 118);
+  }
+
+  .swiper-slide:nth-child(6n) {
+    background-color: rgb(247, 215, 188);
+  }
+
+  .swiper-slide:nth-child(7n) {
+    background-color: rgb(246, 205, 156);
+  }
+
+  .swiper-slide:nth-child(8n) {
+    background-color: rgb(239, 215, 190);
+  }
+
+  .swiper-slide:nth-child(9n) {
+    background-color: rgb(241, 205, 176);
+  }
+
+  .swiper-slide:nth-child(10n) {
+    background-color: rgb(240, 203, 185);
+  }
+
 .journal-counter{
     background-color:olive;
     position: relative;
@@ -52,6 +107,8 @@ body {
     bottom: 90px;
     border-radius: 60px;
     left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
 }
 
 #journal:hover{
@@ -64,13 +121,13 @@ body {
     width: 90vw;
 
     left: 5vw;
-    background-color: blanchedalmond;
+    
     border-radius: 20px;
     transition: bottom 0.5s ease-in-out;
 }
 
 .show{
-    bottom: 10vh;
+    bottom: 3vh;
     
 }
 
