--- a/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
@@ -21,11 +21,24 @@ body {
   .swiper-slide {
     display: flex;
     padding-top:30px;
-    justify-content:center;
+    align-items: center;
     border-radius: 18px;
+    flex-direction: column;
+    justify-content: flex-start;
     font-size: 22px;
     font-weight: bold;
     color: #fff;
+  }
+
+  .plantName{
+    display: block;
+    
+  }
+
+  .plantImage{
+    display: block;
+    width: 50%;
+   
   }
 
   .swiper-slide:nth-child(1n) {
@@ -109,6 +122,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     z-index: 100;
+    pointer-events: all;
 }
 
 #journal:hover{
@@ -159,6 +173,14 @@ body {
     
 }
 
+#content {
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  /* border: 1px solid red; */
+}
 
 #main {
     background-color: black;
