--- a/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
@@ -15,16 +15,18 @@ body {
 
 .swiper {
     width:100%;
+    max-width: 400px;
     height: 100%;
   }
 
   .swiper-slide {
+    box-sizing: border-box;
     display: flex;
-    padding-top:30px;
-    align-items: center;
+    padding:30px;
     border-radius: 18px;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     font-size: 22px;
     font-weight: bold;
     color: #fff;
@@ -39,6 +41,18 @@ body {
     display: block;
     width: 50%;
    
+  }
+  .plantDiscription{
+    font-size: 0.7em;
+    line-height: 1.4em;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+  }
+
+
+  .location-container{
+    width: 100%;
+    padding-left:60px ;
   }
 
   .swiper-slide:nth-child(1n) {
@@ -276,3 +290,5 @@ needle-engine .webxr-button:disabled {
 needle-engine.presentation-mode .hide-in-presentation {
     display: none !important;
 }
+
+
