show plant info only after you clicked this plant

--- a/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
@@ -33,6 +33,22 @@ body {
     font-size: 22px;
     font-weight: bold;
     color: #fff;
+    opacity: 1;
+   
+  }
+
+  .plant-info-container{
+    width: 100%;
+    height: 100%;
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .unrevealed{
+    opacity: 0;
+    
   }
 
   .plantName{
