--- a/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/src/styles/style.css
@@ -21,6 +21,7 @@ body {
 .swiper {
     width:100%;
     max-width: 400px;
+    max-height: 800px;
     height: 100%;
   }
 
@@ -46,12 +47,30 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    transition: opacity 1s ease-in;
+  }
+
+  
+  .plant-placeholder-container{
+    width: 100%;
+    height: 100%;
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .unrevealed{
     opacity: 0;
+
     
   }
+
+  .disable{
+    display: none;
+    
+  }
+
 
   .plantName{
     display: block;
@@ -215,6 +234,39 @@ body {
     color: rgb(117, 96, 70);
 }
 
+.pulse{
+  box-shadow: 0 0 0 rgba(204,169,44, 0.4);
+  animation: pulse 2s infinite;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(167, 155, 110, 0.3);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 40px rgba(167, 155, 110, 0.0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(167, 155, 110, 0.0);
+}
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(167, 155, 110, 0.3);
+    box-shadow: 0 0 0 0 rgba(167, 155, 110, 0.3);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 40px rgba(167, 155, 110, 0.0);
+      box-shadow: 0 0 0 40px rgba(167, 155, 110, 0.0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(167, 155, 110, 0.3);
+      box-shadow: 0 0 0 0 rgba(167, 155, 110, 0.3);
+  }
+}
+
+
+
 #journal:hover{
   
 }
@@ -237,7 +289,7 @@ body {
 }
 
 .hide{
-    bottom: -100vh;
+    bottom: -70vh;
 
 }
 
@@ -346,7 +398,7 @@ needle-engine .loading {
 needle-engine .webxr-buttons {
     position: fixed;
     /* border: red 2px solid; */
-    bottom: 21px;
+    top: 21px;
     left: 50%;
     transform: translate(-50%, 0%);
 
